# prog-tech-client

./: CMakeLists.txt  listenerwindow.cpp  listenerwindow.h  listenerwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  popupwindow.cpp  popupwindow.h  popupwindow.ui  project_test.cpp  project_test.h  resource.qrc
build-DPCTest-Desktop_Qt_5_12_12_MSVC2015_64bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  target_wrapper.bat
build-DPCTest-Desktop_Qt_5_12_12_MSVC2015_64bit-Debug/debug/: moc_predefs.h  tst_dpctest.moc
build-DotaParserClientTest-Desktop_Qt_5_12_12_MSVC2015_64bit-Debug/: CMakeCache.txt
